syntax = "proto3";

package execute;

option java_multiple_files = true;
option java_package = "proto.execute";

import "datafusion.proto";

service Bridge {

  rpc executeQuery (ExecQueryRequest) returns (stream ExecQueryResponse);

  rpc listTablesInCatalog(ListTablesRequest) returns (stream ListTablesResponse);

  rpc getTableDetail(GetTableRequest) returns (TableInfo);
}

message ExecQueryRequest{
  RequestHeader header =1;
  datafusion.PhysicalPlanNode node = 2;
}

message ListTablesRequest {
  RequestHeader header = 1;
  datafusion.SourceScanConfig config = 2;
}

message GetTableRequest{
  RequestHeader header =1;
  string schemaName = 2;
  string tableName = 3;
  datafusion.SourceScanConfig config = 4;
}


message ExecQueryResponse{
  oneof data{
    bytes query_result = 1;
    QueryProfile profile = 2;
  }

}

message QueryProfile{

}

message ListTablesResponse {
  oneof info{
    SchemaInfo schemaInfo = 1;
    TableInfo tableInfo = 2;
  }
}

message RequestHeader{
  string job_id = 1;
}

message SchemaInfo{
  string catalog_name = 1;
  string schema_name = 2;
}

message TableInfo{
  string catalogName = 1;
  string schemaName = 2;
  string tableName = 3;
  int64 rowCount = 4;
  repeated FieldInfo fields = 5;
}

message FieldInfo {
  string fieldName = 1;
  datafusion.ArrowType typeName = 2;
  bool nullable = 3;
}